--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 :root {
-  --ff-sans: "Josefin Sans", sans-serif;
+  --ff-sans: "Poppins", sans-serif;
   --base-font: 1.6rem;
   --fw-normal: 400;
   --fw-bold: 700;
